--- a/README
+++ b/README
@@ -79,5 +79,5 @@ $ blogger test.txt
 
 Licence
  Copyright (C) 2009 midore
- mdiary is licensed under the GPLv2
+ mblogger is licensed under the GPLv2
 
