--- a/README
+++ b/README
@@ -9,8 +9,8 @@ Dependency
 Usage
  # get your BlogID
  $ cd mblogger/bin
- $ vi get-bloggerid.rb # profileid = 'your ProfileID'
- $ ruby191 get-bloggerid.rb
+ $ vi get-blogid.rb # profileid = 'your ProfileID'
+ $ ruby191 get-blogid.rb
  # =>
  BlogTitle=> your blog title
  BlogURL=> http://xxxxxxx.blogspot.com/
